--- a/app/templates/shoe_entry.html
+++ b/app/templates/shoe_entry.html
@@ -30,6 +30,9 @@
         <input type="text" name="brand" placeholder="Brand" required>
         <input type="submit" value="Send">
     </form>
-    <p><a href="{{ url_for('view_data') }}">View Database Contents</a></p>
+    <p>
+        <a href="{{ url_for('view_data') }}">View Database Contents</a>
+        <a href="{{ url_for('logout') }}">Logout</a>
+    </p>
 </body>
 </html>
