--- a/app/templates/shoe_entry.html
+++ b/app/templates/shoe_entry.html
@@ -31,6 +31,7 @@
         <input type="submit" value="Send">
     </form>
     <p>
+        <a href="{{ url_for('index') }}">Home</a>
         <a href="{{ url_for('view_data') }}">View Database Contents</a>
         <a href="{{ url_for('logout') }}">Logout</a>
     </p>
