--- a/app/templates/view_data.html
+++ b/app/templates/view_data.html
@@ -35,6 +35,7 @@
         {% endfor %}
     </table>
     <p>
+        <a href="{{ url_for('index') }}">Home</a>
         <a href="{{ url_for('shoe_entry') }}">Back to Shoe Entry</a>
         <a href="{{ url_for('logout') }}">Logout</a>
     </p>
